fix(app): add css spacing, fix display of reps range add workout data

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,13 @@
 .App {
   text-align: center;
+
 }
 
+.red{
+  border-radius: 5px;
+  border-color: red;
+  border-style: dashed;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
