--- a/src/index.css
+++ b/src/index.css
@@ -92,7 +92,9 @@ body {
   color: white;
   background-color: rgb(34	37	41)	 !important;
 }
-
+.red{
+  border: 2px solid red;
+}
 hr {
   margin: 1rem 0;
   color: inherit;
